--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
@@ -1,14 +1,82 @@
 ﻿<primitives:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.FreestyleDatabaseCheckerWindow" 
                              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                              xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
                              xmlns:lex="http://wpflocalizeextension.codeplex.com"
-                             xmlns:c="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
+                             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                              lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                              lex:ResxLocalizationProvider.DefaultDictionary="Resources"
                              MinWidth="320" MinHeight="240" Width="640" Height="480" Title="{lex:LocText ErrorsInFreestyleDatabase}">
     <primitives:BorderlessWindow.Resources>
+        <converters:ExpanderConverter x:Key="ExpanderConverter"/>
+        <Style TargetType="DataGridRow" x:Key="GridRow">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="DataGridRow">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <ToggleButton x:Name="Expander" Content="{TemplateBinding DetailsVisibility, Converter={StaticResource ExpanderConverter}}" IsChecked="{Binding Path=DetailsVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolToVis}}" ClickMode="Press" Width="11" Height="11" Padding="0,-4,0,0"/>
+
+                            <DataGridCellsPresenter Grid.Column="1" Grid.Row="0" />
+                            <DataGridDetailsPresenter Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding AreRowDetailsFrozen, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Visibility="{TemplateBinding DetailsVisibility}" />
+                            <Rectangle Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" StrokeThickness="1" Stroke="Black" StrokeDashArray="1 2" SnapsToDevicePixels="true" Opacity="0" x:Name="Focus" />
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter TargetName="Focus" Property="Opacity" Value="1" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="DataGridCell" x:Key="GridCell">
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Foreground" Value="Black" />
+                </Trigger>
+            </Style.Triggers>
+            <Setter Property="FocusVisualStyle">
+                <Setter.Value>
+                    <Style>
+                        <Setter Property="Control.Template">
+                            <Setter.Value>
+                                <ControlTemplate />
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="DataGridCell">
+                        <Grid Name="Root" Background="{TemplateBinding Background}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <ContentPresenter Content="{TemplateBinding Content}" 
+                                                      ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalAlignment}" 
+                                                      VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                                      Margin="{TemplateBinding Padding}" />
+                            <Rectangle Name="RightGridLine" Grid.Column="1" VerticalAlignment="Stretch" Width="1" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style TargetType="DataGrid" x:Key="Grid">
             <Setter Property="AutoGenerateColumns" Value="False"/> 
             <Setter Property="IsTextSearchEnabled" Value="False"/> 
@@ -22,9 +90,12 @@
             <Setter Property="CanUserResizeColumns" Value="True"/> 
             <Setter Property="CanUserSortColumns" Value="False"/> 
             <Setter Property="SelectionUnit" Value="FullRow"/> 
+            <Setter Property="RowHeaderWidth" Value="0"/>
             <Setter Property="Focusable" Value="False"/>
             <Setter Property="ClipboardCopyMode" Value="None"/> 
             <Setter Property="BorderBrush" Value="{StaticResource NormalBorderBrush}"/>
+            <Setter Property="RowStyle" Value="{StaticResource GridRow}"/>
+            <Setter Property="CellStyle" Value="{StaticResource GridCell}"/>
         </Style>
         <DataTemplate x:Key="NameColumnTemplate">
             <Grid Background="Transparent">
@@ -90,9 +161,9 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Text="{lex:Loc TheFollowingGamesMightHaveLeftovers}" HorizontalAlignment="Left" Margin="0,10,0,10" TextWrapping="Wrap" />
+                        <TextBlock Grid.Column="0" Grid.Row="0" Text="{lex:Loc TheFollowingGamesMightHaveLeftovers}" HorizontalAlignment="Left" Margin="0,10,0,10" TextWrapping="Wrap" />
 
-                        <DataGrid Grid.Row="1" ItemsSource="{Binding MissingEntries}" Style="{StaticResource Grid}" RowDetailsVisibilityMode="Visible">
+                        <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding MissingEntries}" Style="{StaticResource Grid}">
                             <DataGrid.Columns>
                                 <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
                                 <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
@@ -106,27 +177,23 @@
                             </DataGrid.Columns>
                             <DataGrid.RowDetailsTemplate>
                                 <DataTemplate>
-                                    <c:ProportionalPanel ItemsSource="{Binding Content}" ValueMemberPath="Size">
-                                        <c:ProportionalPanel.ItemTemplate>
+                                    <ItemsControl ItemsSource="{Binding Content}">
+                                        <ItemsControl.ItemTemplate>
                                             <DataTemplate>
                                                 <Border Background="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}" Padding="2">
-                                                    <TextBlock Text="{Binding Title}">
-                                                        <TextBlock.ToolTip>
-                                                            <MultiBinding Converter="{StaticResource StringFormatter}" ConverterParameter="{}{0} ({1} bytes)">
-                                                                <Binding Path="Title"/>
-                                                                <Binding Path="Size"/>
-                                                            </MultiBinding>
-                                                        </TextBlock.ToolTip>
-                                                    </TextBlock>
+                                                    <DockPanel>
+                                                        <TextBlock DockPanel.Dock="Right" Text="{Binding Size, Converter={StaticResource SizeConverter}}"/>
+                                                        <TextBlock Text="{Binding Title}"/>
+                                                    </DockPanel>
                                                 </Border>
                                             </DataTemplate>
-                                        </c:ProportionalPanel.ItemTemplate>
-                                    </c:ProportionalPanel>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
                                 </DataTemplate>
                             </DataGrid.RowDetailsTemplate>
                         </DataGrid>
-                        
-                        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+
+                        <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
                             <Button MinWidth="75" Content="{lex:Loc Cleanup}" Margin="5,0,0,0" Command="{Binding CleanUpCommand}"/>
                         </StackPanel>
                     </Grid>
