--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -304,7 +304,8 @@
 
                     <DataTemplate x:Key="FileSystemItemTitleTemplate">
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{Binding Thumbnail}" Width="16" Height="16" Margin="2,0,3,0" />
+                            <Image Source="{Binding Thumbnail}" Width="16" Height="16" Margin="2,0,3,0" SnapsToDevicePixels="True"
+                                   RenderOptions.BitmapScalingMode="NearestNeighbor"/>
                             <TextBlock FontWeight="Bold" x:Name="Primary">
                                     <TextBlock.Text>
                                         <MultiBinding Converter="{StaticResource TitleConverter}">
