--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FreestyleDatabaseCheckerWindow.xaml
@@ -6,37 +6,40 @@
                              xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                              lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                              lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                             MinWidth="320" MinHeight="240" Width="640" Height="480" Title="{lex:LocText ErrorsInFreestyleDatabase}">
+                             MinWidth="320" MinHeight="240" Width="640" Height="480" 
+                             Title="{lex:LocText ErrorsInFreestyleDatabase}">
     <primitives:BorderlessWindow.Resources>
         <converters:ExpanderConverter x:Key="ExpanderConverter"/>
-        <Style TargetType="DataGridRow" x:Key="GridRow">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="DataGridRow">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <ToggleButton x:Name="Expander" Content="{TemplateBinding DetailsVisibility, Converter={StaticResource ExpanderConverter}}" IsChecked="{Binding Path=DetailsVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolToVis}}" ClickMode="Press" Width="11" Height="11" Padding="0,-4,0,0"/>
 
-                            <DataGridCellsPresenter Grid.Column="1" Grid.Row="0" />
-                            <DataGridDetailsPresenter Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding AreRowDetailsFrozen, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Visibility="{TemplateBinding DetailsVisibility}" />
-                            <Rectangle Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" StrokeThickness="1" Stroke="Black" StrokeDashArray="1 2" SnapsToDevicePixels="true" Opacity="0" x:Name="Focus" />
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter TargetName="Focus" Property="Opacity" Value="1" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <ControlTemplate TargetType="DataGridRow" x:Key="DataGridRowTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ToggleButton x:Name="Expander" Width="11" Height="11" Padding="0,-4,0,0" ClickMode="Press" Visibility="Collapsed"
+                              Content="{TemplateBinding DetailsVisibility, Converter={StaticResource ExpanderConverter}}" 
+                              IsChecked="{Binding Path=DetailsVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, Converter={StaticResource BoolToVis}}"/>
+
+                <DataGridCellsPresenter Grid.Column="1" Grid.Row="0" />
+                <DataGridDetailsPresenter Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" 
+                                          SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding AreRowDetailsFrozen, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" 
+                                          Visibility="{TemplateBinding DetailsVisibility}" />
+                <Rectangle Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" StrokeThickness="1" Stroke="Black" StrokeDashArray="1 2" SnapsToDevicePixels="true" Opacity="0" x:Name="Focus" />
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter TargetName="Focus" Property="Opacity" Value="1" />
+                </Trigger>
+                <Trigger Property="Tag" Value="Details">
+                    <Setter TargetName="Expander" Property="Visibility" Value="Visible"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
 
         <Style TargetType="DataGridCell" x:Key="GridCell">
             <Style.Triggers>
@@ -94,7 +97,6 @@
             <Setter Property="Focusable" Value="False"/>
             <Setter Property="ClipboardCopyMode" Value="None"/> 
             <Setter Property="BorderBrush" Value="{StaticResource NormalBorderBrush}"/>
-            <Setter Property="RowStyle" Value="{StaticResource GridRow}"/>
             <Setter Property="CellStyle" Value="{StaticResource GridCell}"/>
         </Style>
         <DataTemplate x:Key="NameColumnTemplate">
@@ -134,6 +136,11 @@
                         <TextBlock Grid.Row="0" Text="{lex:Loc TheFollowingGamesAreMissing}" HorizontalAlignment="Left" Margin="0,0,0,10" TextWrapping="Wrap" />
 
                         <DataGrid Grid.Row="1" ItemsSource="{Binding MissingFolders}" Style="{StaticResource Grid}">
+                            <DataGrid.RowStyle>
+                                <Style TargetType="DataGridRow">
+                                    <Setter Property="Template" Value="{StaticResource DataGridRowTemplate}"/>
+                                </Style>
+                            </DataGrid.RowStyle>
                             <DataGrid.Columns>
                                 <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
                                 <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
@@ -164,6 +171,12 @@
                         <TextBlock Grid.Column="0" Grid.Row="0" Text="{lex:Loc TheFollowingGamesMightHaveLeftovers}" HorizontalAlignment="Left" Margin="0,10,0,10" TextWrapping="Wrap" />
 
                         <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding MissingEntries}" Style="{StaticResource Grid}">
+                            <DataGrid.RowStyle>
+                                <Style TargetType="DataGridRow">
+                                    <Setter Property="Tag" Value="Details"/>
+                                    <Setter Property="Template" Value="{StaticResource DataGridRowTemplate}"/>
+                                </Style>
+                            </DataGrid.RowStyle>
                             <DataGrid.Columns>
                                 <DataGridTemplateColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Name}" Width="Auto" IsReadOnly="True" CellTemplate="{StaticResource NameColumnTemplate}"/>
                                 <DataGridTextColumn Header="{lex:LocText Neurotoxin.Godspeed.Shell:Resources:Path}" Width="*" IsReadOnly="True" Binding="{Binding Path}"/>
@@ -180,7 +193,8 @@
                                     <ItemsControl ItemsSource="{Binding Content}">
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate>
-                                                <Border Background="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}" Padding="2">
+                                                <Border Padding="32,2,0,2">
+                                                    <!-- Background="{Binding ContentType, Converter={StaticResource ContentTypeConverter}}" -->
                                                     <DockPanel>
                                                         <TextBlock DockPanel.Dock="Right" Text="{Binding Size, Converter={StaticResource SizeConverter}}"/>
                                                         <TextBlock Text="{Binding Title}"/>
