--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -101,7 +101,7 @@
                     <MenuItem Header="{lex:LocText Exit}" Command="{x:Static commands:FileManagerCommands.ExitCommand}" />
                 </MenuItem>
                 <MenuItem Header="{lex:LocText CommandsMenu}">
-                    <MenuItem Header="{lex:LocText CalculateOccupiedSpace}" InputGestureText="Ctrl+Shift+Enter"
+                    <MenuItem Header="{lex:LocText CalculateOccupiedSpace}" InputGestureText="Shift+Alt+Enter"
                               Command="{Binding ActivePane.CalculateSizeCommand}" CommandParameter="{StaticResource True}" />
                     <MenuItem Header="{lex:LocText ShowFtpLog}" Command="{Binding ActivePane.ShowFtpLogCommand}" />
                 </MenuItem>
