--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TreeSelectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TreeSelectionDialog.xaml
@@ -20,7 +20,7 @@
 
         <TextBlock Grid.Row="0" Text="{Binding TreeSelectionDescription}" Margin="0,0,0,5"/>
         
-        <TreeView Grid.Row="1" ItemsSource="{Binding SelectionTree}">
+        <TreeView Grid.Row="1" ItemsSource="{Binding SelectionTree}" BorderBrush="{StaticResource NormalBorderBrush}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="True"/>
