--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
@@ -54,7 +54,7 @@
                             <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
                                  SelectedItem="{Binding ProfileExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
 
-                            <CheckBox Grid.Row="1" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
+                            <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
                                  IsChecked="{Binding ProfileInvalidation}" Margin="0,0,0,5" />
 
                             <TextBlock Grid.Row="2" Text="{lex:LocText RecognizedGame}" VerticalAlignment="Center" />
@@ -74,7 +74,7 @@
                             <ComboBox Grid.Row="5" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
                                  SelectedItem="{Binding XboxLiveContentExpiration}" VerticalAlignment="Center" ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}" />
 
-                            <CheckBox Grid.Row="6" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
+                            <CheckBox Grid.Row="6" Grid.ColumnSpan="2" Content="{lex:LocText InvalidateCacheIfSourceChanges}"
                                  IsChecked="{Binding XboxLiveContentInvalidation}" Margin="0,0,0,5" />
 
                             <TextBlock Grid.Row="7" Text="{lex:LocText UnknownContent}" VerticalAlignment="Center" />
@@ -102,24 +102,28 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <CheckBox Grid.Row="0" Grid.ColumnSpan="2" Content="{lex:LocText CheckForNewerVersionOnStartup}"
                               Padding="5,0,0,0" IsChecked="{Binding UseVersionChecker}" Margin="0,0,0,5" />
 
-                    <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Content="{lex:LocText VerifyFileHashAfterFtpUpload}"
+                    <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Content="{lex:LocText DisableNotificationSound}"
+                              Padding="5,0,0,0" IsChecked="{Binding DisableNotificationSound}" Margin="0,0,0,5" />
+
+                    <CheckBox Grid.Row="2" Grid.ColumnSpan="2" Content="{lex:LocText VerifyFileHashAfterFtpUpload}"
                               Padding="5,0,0,0" IsChecked="{Binding VerifyFileHashAfterFtpUpload}" Margin="0,0,0,5" />
 
-                    <Image Grid.Row="2" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
-                    <TextBlock Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText VerifyFileHashAfterFtpUploadRemarks}" />
+                    <Image Grid.Row="3" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
+                    <TextBlock Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText VerifyFileHashAfterFtpUploadRemarks}" />
 
-                    <CheckBox Grid.Row="3" Grid.ColumnSpan="2" Content="{lex:LocText UseRemoteCopy}"
+                    <CheckBox Grid.Row="4" Grid.ColumnSpan="2" Content="{lex:LocText UseRemoteCopy}"
                               Padding="5,0,0,0" IsChecked="{Binding UseRemoteCopy}" />
 
-                    <Image Grid.Row="4" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
-                    <TextBlock Grid.Row="4" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText UseRemoteCopyRemarks}" />
+                    <Image Grid.Row="5" Source="/Resources/info.png" Margin="20,10,5,0" VerticalAlignment="Top" />
+                    <TextBlock Grid.Row="5" Grid.Column="1" TextWrapping="Wrap" Margin="0,10,0,10" Text="{lex:LocText UseRemoteCopyRemarks}" />
 
-                    <DockPanel Grid.Row="5" Grid.ColumnSpan="2">
+                    <DockPanel Grid.Row="6" Grid.ColumnSpan="2">
                         <ComboBox DockPanel.Dock="Right" ItemsSource="{Binding FsdContentScanTriggerOptions}"
                                   SelectedItem="{Binding FsdContentScanTrigger}" VerticalAlignment="Center">
                             <ComboBox.ItemTemplate>
