--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -109,13 +109,13 @@
                 <MenuItem Header="{lex:LocText CommandsMenu}">
                     <MenuItem Header="{lex:LocText CalculateOccupiedSpace}" InputGestureText="Shift+Alt+Enter"
                               Command="{Binding ActivePane.CalculateSizeCommand}" CommandParameter="{StaticResource True}" />
-                    <MenuItem Header="{lex:LocText ShowFtpLog}" Command="{Binding ActivePane.ShowFtpLogCommand}" />
+                    <MenuItem Header="{lex:LocText ShowFtpLog}" Command="{Binding FtpPane.ShowFtpLogCommand}" />
                 </MenuItem>
                 <MenuItem Header="{lex:LocText FsdMenu}" IsEnabled="{Binding FtpPane.IsFSD, FallbackValue=False}">
-                    <MenuItem Header="{lex:LocText FreestyleDatabaseCheck}" Command="{Binding ActivePane.CheckFreestyleDatabaseCommand}" />
-                    <MenuItem Header="{lex:LocText StartContentScan}" Command="{Binding ActivePane.StartContentScanCommand}" />
-                    <MenuItem Header="{lex:LocText OpenWebUI}" Command="{Binding ActivePane.OpenWebUICommand}" />
-                    <MenuItem Header="{lex:LocText Shutdown}" Command="{Binding ActivePane.ShutdownCommand}" />
+                    <MenuItem Header="{lex:LocText FreestyleDatabaseCheck}" Command="{Binding FtpPane.CheckFreestyleDatabaseCommand}" />
+                    <MenuItem Header="{lex:LocText StartContentScan}" Command="{Binding FtpPane.StartContentScanCommand}" />
+                    <MenuItem Header="{lex:LocText OpenWebUI}" Command="{Binding FtpPane.OpenWebUICommand}" />
+                    <MenuItem Header="{lex:LocText Shutdown}" Command="{Binding FtpPane.ShutdownCommand}" />
                 </MenuItem>
                 <MenuItem Header="{lex:LocText OptionsMenu}">
                     <MenuItem Header="{lex:LocText Settings, Suffix={x:Static constants:Strings.DotDotDot}}" Command="{x:Static commands:FileManagerCommands.SettingsCommand}" />
