--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FtpTraceWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FtpTraceWindow.xaml
@@ -3,8 +3,9 @@
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
                              xmlns:lex="http://wpflocalizeextension.codeplex.com"
-                             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                             xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                              xmlns:b="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Behaviors"
+                             xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
                              lex:LocalizeDictionary.DesignCulture="en-US"
                              lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                              lex:ResxLocalizationProvider.DefaultDictionary="Resources"
@@ -16,13 +17,18 @@
         </Grid.RowDefinitions>
 
         <TextBox Grid.Row="0" Text="{Binding Log}" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" FontFamily="Consolas">
-            <i:Interaction.Behaviors>
+            <e:Interaction.Behaviors>
                 <b:TextBoxAutoScrollToBottomBehavior/>
-            </i:Interaction.Behaviors>
+            </e:Interaction.Behaviors>
         </TextBox>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
             <Button Width="75" Content="{lex:LocText Close}" Margin="5" Command="{Binding CloseCommand}" />
         </StackPanel>
     </Grid>
+    <e:Interaction.Triggers>
+        <e:EventTrigger EventName="Closing">
+            <inf:MapEventToCommand Command="{Binding ClosingCommand}" />
+        </e:EventTrigger>
+    </e:Interaction.Triggers>
 </primitives:BorderlessWindow>
