--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
@@ -1,16 +1,15 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.StatisticsWindow"
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives" 
-                       xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
                        xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
                        xmlns:lex="http://wpflocalizeextension.codeplex.com"
                        xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
                        lex:LocalizeDictionary.DesignCulture="en-US"
                        lex:ResxLocalizationProvider.DefaultAssembly="Neurotoxin.Godspeed.Shell"
                        lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-                       Width="420" Title="{lex:LocText Statistics}">
+                       MinWidth="420" Title="{lex:LocText Statistics}"
+                       SizeToContent="WidthAndHeight">
     <primitives:DialogBase.Resources>
         <co:FileSizeConverter x:Key="FileSizeConverter" />
     </primitives:DialogBase.Resources>
