--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileDetailsBox.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileDetailsBox.xaml
@@ -27,7 +27,7 @@
 
             <TextBlock Grid.ColumnSpan="2" Text="{Binding Path}" TextWrapping="Wrap" Margin="0,0,0,5"/>
 
-            <Image Grid.Column="0" Grid.Row="1" Width="96" Height="96" Source="{Binding Thumbnail}" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" SnapsToDevicePixels="True"/>
+            <Image Grid.Column="0" Grid.Row="1" Width="96" Height="96" Source="{Binding Thumbnail}" Stretch="None"/>
 
             <Grid Grid.Column="1" Grid.Row="1" Margin="10,0,0,0">
                 <Grid.ColumnDefinitions>
